--- a/readme
+++ b/readme
@@ -1,11 +1,67 @@
-echo "# hello-world" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/thanujkumar1999/hello-world.git
-git push -u origin main
+NAME: THANUJ KUMAR SEERA		
+S/O: DURGA PRASAD SEERA
+NATIVE PLACE: KOTHAGUDEM
+CONTACT NO: 9381755351
+MAIL ID: thanujkumar325@gmail.com
+      
+        I am S.Thanuj Kumar. I am 20 years old. And i pursuing B.TECH final year in UCE&T, MGU. Dedication and commitment on work.
 
-hii friends
-this is thanuj
-i love github
+
+EDUCATION QUALIFICATION:
+B.TECH: Pursuing final year.
+Diploma: I completed diploma with 81.25 in EEE in AKITS at Kothagudem.
+SSC: I completed my SSC with 7.3gpa in Singerani high school at kothagudem.
+
+
+
+TECHNICAL SKILLS: 
+1.	PHP
+2.	Knowledge on java and python.
+3.  ML
+4.  AI
+5.  DATA SCINCE.
+
+
+ACHIVEMENTS:
+1.	One of Runner-up T-20 in the startup India telangana innovation yatra.
+2.	Boot Camp Held with the angel investors in Cyber Pearl.
+
+
+MY SKILLS:
+1.	Communication skills.
+2.	Marketing.
+3.	Web development.
+4.	Social media
+5.	Leadership skills
+6.	Problem solving and decision making.
+
+
+PERSONAL DETAILS:
+ NAME: S.Thanujkumar
+ FATHERS NAME: S.Durga Prasad.
+ MOTHERS NAME: S.Nirmala.
+ FATHERS OCCUPATION:  PVT employer.
+ NATIVE PLACE: Kothagudem.
+ ADRESS: 9-7-57, Sanyasi basthi, kothagudem, Telangana, 507101.
+
+
+STRENGTHS AND WEAKNESS:
+Strengths:
+ Hard work, Dedication, Commitment, Will power.
+Weakness:
+ I am n foodie I eat more chocolates and I try to make avoid them.
+
+
+HOBBIES:
+1.	Reading Autobiographies
+2.	Playing sports.
+
+
+GOALS:
+  To become a one of the best entrepreneur be like an role model to the others.
+
+
+RoalModel: 
+  Marken juken burg, Thomas Alfa Edison.
+ 
+
